--- a/CMSv4/Areas/Modulo/Views/TakeOrPay/ScriptDistribuicaoCarga.cshtml
+++ b/CMSv4/Areas/Modulo/Views/TakeOrPay/ScriptDistribuicaoCarga.cshtml
@@ -45,7 +45,7 @@
             $("#erroTonelagemDecimal").hide()
             $("#TonelagemMedia").removeClass("is-invalid")
         }
-        
+
     });
 
     $("#NavioViagem").change(function () {
@@ -148,8 +148,9 @@
         $("#erroNavioViagem").hide();
         $("#NavioViagem").removeClass("is-invalid")
         $("#erroContainer").hide()
-        $("#erroContagemContainer").hide();
+        $("#erroPortos").hide();
         $("#erroTonelagem").hide();
+        $("#erroUnidades").hide();
         $("#TonelagemMedia").removeClass("is-invalid")
 
         $("#Etapa4_1").hide()
@@ -165,7 +166,8 @@
         $("#erroNavioViagem").hide();
         $("#NavioViagem").removeClass("is-invalid")
         $("#erroContainer").hide()
-        $("#erroContagemContainer").hide();
+        $("#erroPortos").hide();
+        $("#erroUnidades").hide();
         $("#erroTonelagem").hide();
         $("#TonelagemMedia").removeClass("is-invalid")
 
@@ -180,8 +182,6 @@
             $("#divNavioViagemOp2").hide();
             $("#divNavioViagemOp3").hide();
             $("#divDeadline").hide();
-
-            HabilitarUnidades();
         }
         else if (!isSemanal && isSim) {
             AutocompleteNavio();
@@ -193,8 +193,6 @@
             $("#divNavioViagemOp2").hide();
             $("#divNavioViagemOp3").hide();
             $("#divDeadline").hide();
-
-            HabilitarUnidades();
         }
         else {
             AutocompleteNavio();
@@ -205,11 +203,11 @@
             $("#divNavioViagemOp2").show();
             $("#divNavioViagemOp3").show();
             $("#divDeadline").show();
-
-            DesabilitarUnidades();
         }
 
         LimparCampos();
+
+        CarregarPortos();
     }
 
     function AvancarEtapa5() {
@@ -254,15 +252,10 @@
     function AdicionarLinhaTabelaContainer() {
         let erro = 0;
 
-        let RIG = $("#RIG").val();
-        let IBB = $("#IBB").val();
-        let IOA = $("#IOA").val();
-        let SSZ = $("#SSZ").val();
-        let SPB = $("#SPB").val();
-        let VIX = $("#VIX").val();
-        let SSA = $("#SSA").val();
-        let SUA = $("#SUA").val();
-        let PEC = $("#PEC").val();
+        let PortoOrigem = $("#PortoOrigem").val();
+        let PortoDestino = $("#PortoDestino").val();
+        let Unidades = $("#Unidades").val();
+        let CustoAdicional = $('#ValorAdicional').html().replace('R$ ', '');
 
         let TipoContainer = '';
         let TamanhoContainer = '';
@@ -309,13 +302,21 @@
         }
 
 
-        if ((RIG + IBB + IOA + SSZ + SPB + VIX + SSA + SUA + PEC) == 0) {
-            $("#erroContagemContainer").show();
+        if (PortoOrigem == "" || PortoDestino == "") {
+            $("#erroPortos").show();
 
             erro++;
         }
         else {
-            $("#erroContagemContainer").hide();
+            $("#erroPortos").hide();
+        }
+
+        if (Unidades <= 0) {
+            $("#erroUnidades").show();
+            erro++;
+        }
+        else {
+            $("#erroUnidades").hide();
         }
 
         if ($("#TonelagemMedia").val() <= 0) {
@@ -338,15 +339,9 @@
                 "TipoContainer": TipoContainer,
                 "TamanhoContainer": TamanhoContainer,
                 "TonelagemMedia": $("#TonelagemMedia").val(),
-                "RIG": RIG,
-                "IBB": IBB,
-                "IOA": IOA,
-                "SSZ": SSZ,
-                "SPB": SPB,
-                "VIX": VIX,
-                "SSA": SSA,
-                "SUA": SUA,
-                "PEC": PEC
+                "PortoOrigem": PortoOrigem,
+                "PortoDestino": PortoDestino,
+                "Unidades": Unidades
             }
 
             $.ajax({
@@ -355,19 +350,7 @@
                 data: dados,
                 success: function (data) {
                     if (data.Sucess == true) {
-                        $('#tabelaContainer').append('<tr id="tr-' + data.Codigo + '"><th>Container <strong>' + TipoContainer + ' - <span style="color: #057dc8;">' + TamanhoContainer + '</span></strong></th><td><strong ' + (RIG > 0 ? ' class="color" ' : ' ') + '>' + RIG + '</strong> unidades <br> RIG/MAO</td><td><strong ' + (IBB > 0 ? ' class="color" ' : ' ') + '>' + IBB + '</strong> unidades <br>IBB/MAO</td><td><strong ' + (IOA > 0 ? ' class="color" ' : ' ') + '>' + IOA + '</strong> unidades <br> IOA/MAO</td><td><strong ' + (SSZ > 0 ? ' class="color" ' : ' ') + '>' + SSZ + '</strong> unidades <br> SSZ/MAO</td><td><strong ' + (SPB > 0 ? ' class="color" ' : ' ') + '>' + SPB + '</strong> unidades <br> SPB/MAO</td><td><strong ' + (VIX > 0 ? ' class="color" ' : ' ') + '>' + VIX + '</strong> unidades <br> VIX/MAO</td><td><strong ' + (SSA > 0 ? ' class="color" ' : ' ') + '>' + SSA + '</strong> unidades <br> SSA/MAO</td><td><strong ' + (SUA > 0 ? ' class="color" ' : ' ') + '>' + SUA + '</strong> unidades <br> SUA/MAO</td><td><strong ' + (PEC > 0 ? ' class="color" ' : ' ') + '>' + PEC + '</strong> unidades <br> PEC/MAO</td><td><a href="javascript:ExcluirTabelaContainer(' + data.Codigo + ')" class="icon icon-trash"></a></td></tr>');
-
-                        if (!$("#sim").prop("checked")) {
-                            DesabilitarUnidade("RIG")
-                            DesabilitarUnidade("IBB")
-                            DesabilitarUnidade("IOA")
-                            DesabilitarUnidade("SSZ")
-                            DesabilitarUnidade("SPB")
-                            DesabilitarUnidade("VIX")
-                            DesabilitarUnidade("SSA")
-                            DesabilitarUnidade("SUA")
-                            DesabilitarUnidade("PEC")
-                        }
+                        $('#tabelaContainer').append('<tr id="tr-' + data.Codigo + '"><td><strong>' + Unidades + '</strong> unidades <br></td><td><strong>Container ' + TipoContainer + '</strong></td><td>de <strong>' + PortoOrigem + '</strong> para <strong>' + PortoDestino + '</strong></td><td>R$ <strong>' + CustoAdicional + '</strong></td><td><a href="javascript:ExcluirTabelaContainer(' + data.Codigo + ')" class="icon icon-trash"></a></td></tr>');
 
                         LimparCampos();
                     }
@@ -391,15 +374,13 @@
         $("#Container3").removeClass("active")
         $("#Container4").removeClass("active")
 
-        $("#RIG").val(0).trigger('change');
-        $("#IBB").val(0).trigger('change');
-        $("#IOA").val(0).trigger('change');
-        $("#SSZ").val(0).trigger('change');
-        $("#SPB").val(0).trigger('change');
-        $("#VIX").val(0).trigger('change');
-        $("#SSA").val(0).trigger('change');
-        $("#SUA").val(0).trigger('change');
-        $("#PEC").val(0).trigger('change');
+        if($("#PortoOrigem").val() != null)
+            $("#PortoOrigem").val("").trigger('change');
+
+        if ($("#PortoDestino").val() != null)
+            $("#PortoDestino").val("").trigger('change');
+
+        $("#Unidades").val(0)
 
         $("#TonelagemMedia").val("");
     }
@@ -453,7 +434,7 @@
             if (data.Sucess == true) {
                 $("#tabelaContainer").html("");
             }
-            
+
         },
         error: function (data) {
             ErroGenerico();
@@ -461,75 +442,180 @@
     }
 
     function AtualizarDeadline() {
-        $.ajax({
-        type: "POST",
-        url: "@Portal.UrlCms(portal)/TakeOrPay/ListarDeadLine",
-        data: { "NavioViagem": $("#NavioViagem").val() },
-        success: function (data) {
-            if (data.Sucess == true) {
-                AtualizaUnidade(data.DeadlineRIG, data.DeadlineRIGAtivo, "RIG")
-                AtualizaUnidade(data.DeadlineIBB, data.DeadlineIBBAtivo, "IBB")
-                AtualizaUnidade(data.DeadlineIOA, data.DeadlineIOAAtivo, "IOA")
-                AtualizaUnidade(data.DeadlineSSZ, data.DeadlineSSZAtivo, "SSZ")
-                AtualizaUnidade(data.DeadlineSPB, data.DeadlineSPBAtivo, "SPB")
-                AtualizaUnidade(data.DeadlineVIX, data.DeadlineVIXAtivo, "VIX")
-                AtualizaUnidade(data.DeadlineSSA, data.DeadlineSSAAtivo, "SSA")
-                AtualizaUnidade(data.DeadlineSUA, data.DeadlineSUAAtivo, "SUA")
-                AtualizaUnidade(data.DeadlinePEC, data.DeadlinePECAtivo, "PEC")
-            }
-            else {
-                ErroGenerico();
-            }
-        },
-        error: function (data) {
-            ErroGenerico();
-        }});
+        CarregarPortos();
     }
 
-    function AtualizaUnidade(deadLine, deadLineAtivo, porto) {
-        if (deadLineAtivo == null) {
-            DesabilitarUnidade(porto)
+    $("#PortoOrigem").change(function () {
+        CarregarPortoDestino()
+    });
+
+    $("#PortoDestino").change(function () {
+        CarregarPortoOrigem()
+
+        CarregarValorAdicional()
+    });
+
+    function CarregarPortos() {
+        if ($("#sim").prop("checked")) {
+            $.ajax({
+                type: "POST",
+                url: "@Portal.UrlCms(portal)/TakeOrPay/CarregarPortos",
+                success: function (data) {
+                    $('#PortoOrigem').empty();
+                    $('#PortoOrigem').append(data.PortoOrigem);
+
+                    $('#PortoDestino').empty();
+                    $('#PortoDestino').append(data.PortoDestino);
+                },
+                error: function (data) {
+                }
+            });
         }
         else {
-            $("#" + porto).val(0)
-            $("#" + porto).attr("disabled", !deadLineAtivo)
-            $("#deadline-" + porto).html(deadLine + "<span>deadline</span>")
+            $.ajax({
+                type: "POST",
+                url: "@Portal.UrlCms(portal)/TakeOrPay/ListarDeadLine",
+                data: { "NavioViagem": $("#NavioViagem").val() },
+                success: function (data) {
+                    if (data.Sucess == true) {
+                        $('#PortoOrigem').empty();
+                        $('#PortoOrigem').append(data.PortoOrigem);
+
+                        $('#PortoDestino').empty();
+                        $('#PortoDestino').append(data.PortoDestino);
+                    }
+                    else {
+                        ErroGenerico();
+                    }
+                },
+                error: function (data) {
+                    ErroGenerico();
+                }
+            });
         }
     }
 
-    function HabilitarUnidades() {
-        HabilitarUnidade("RIG")
-        HabilitarUnidade("IBB")
-        HabilitarUnidade("IOA")
-        HabilitarUnidade("SSZ")
-        HabilitarUnidade("SPB")
-        HabilitarUnidade("VIX")
-        HabilitarUnidade("SSA")
-        HabilitarUnidade("SUA")
-        HabilitarUnidade("PEC")
+    function CarregarPortoDestino() {
+        if ($("#sim").prop("checked")) {
+            $.ajax({
+                type: "POST",
+                url: "@Portal.UrlCms(portal)/TakeOrPay/CarregarPortosDestino",
+                data:
+                {
+                    "PortoOrigem": $("#PortoOrigem").val()
+                },
+                success: function (data) {
+                    let valor = $('#PortoDestino').val()
+
+                    $('#PortoDestino').empty();
+                    $('#PortoDestino').append(data.PortoDestino);
+
+                    $('#PortoDestino').val(valor)
+                },
+                error: function (data) {
+                }
+            });
+        }
+        else {
+            $.ajax({
+                type: "POST",
+                url: "@Portal.UrlCms(portal)/TakeOrPay/ListarDeadLineDestino",
+                data:
+                {
+                    "NavioViagem": $("#NavioViagem").val(),
+                    "PortoOrigem": $("#PortoOrigem").val()
+                },
+                success: function (data) {
+                    if (data.Sucess == true) {
+                        let valor = $('#PortoDestino').val()
+
+                        $('#PortoDestino').empty();
+                        $('#PortoDestino').append(data.PortoDestino);
+
+                        $('#PortoDestino').val(valor)
+                    }
+                    else {
+                        ErroGenerico();
+                    }
+                },
+                error: function (data) {
+                    ErroGenerico();
+                }
+            });
+        }
     }
 
-    function HabilitarUnidade(porto) {
-        $("#" + porto).val(0)
-        $("#" + porto).attr("disabled", false)
-        $("#deadline-" + porto).html("")
+    function CarregarPortoOrigem() {
+        if ($("#sim").prop("checked")) {
+            $.ajax({
+                type: "POST",
+                url: "@Portal.UrlCms(portal)/TakeOrPay/CarregarPortosOrigem",
+                data:
+                {
+                    "PortoDestino": $("#PortoDestino").val()
+                },
+                success: function (data) {
+                    let valor = $('#PortoOrigem').val()
+
+                    $('#PortoOrigem').empty();
+                    $('#PortoOrigem').append(data.PortoOrigem);
+
+                    $('#PortoOrigem').val(valor)
+                },
+                error: function (data) {
+                }
+            });
+        }
+        else {
+            $.ajax({
+                type: "POST",
+                url: "@Portal.UrlCms(portal)/TakeOrPay/ListarDeadLineOrigem",
+                data:
+                {
+                    "NavioViagem": $("#NavioViagem").val(),
+                    "PortoDestino": $("#PortoDestino").val()
+                },
+                success: function (data) {
+                    if (data.Sucess == true) {
+                        let valor = $('#PortoOrigem').val()
+
+                        $('#PortoOrigem').empty();
+                        $('#PortoOrigem').append(data.PortoOrigem);
+
+                        $('#PortoOrigem').val(valor)
+                    }
+                    else {
+                        ErroGenerico();
+                    }
+                },
+                error: function (data) {
+                    ErroGenerico();
+                }
+            });
+        }
     }
 
-    function DesabilitarUnidades() {
-        DesabilitarUnidade("RIG")
-        DesabilitarUnidade("IBB")
-        DesabilitarUnidade("IOA")
-        DesabilitarUnidade("SSZ")
-        DesabilitarUnidade("SPB")
-        DesabilitarUnidade("VIX")
-        DesabilitarUnidade("SSA")
-        DesabilitarUnidade("SUA")
-        DesabilitarUnidade("PEC")
-    }
-
-    function DesabilitarUnidade(porto) {
-        $("#" + porto).val(0)
-        $("#" + porto).attr("disabled", true)
-        $("#deadline-" + porto).html("")
+    function CarregarValorAdicional(PortoDestino) {
+        if ($("#PortoDestino").val() != null && $("#PortoDestino").val() != "") {
+            $.ajax({
+                type: "POST",
+                url: "@Portal.UrlCms(portal)/TakeOrPay/CarregarValorAdicional",
+                data:
+                {
+                    "PortoDestino": $("#PortoDestino").val()
+                },
+                success: function (data) {
+                    if (data.Sucess == true) {
+                        $('#ValorAdicional').html('R$ ' + data.Valor)
+                    }
+                    else {
+                        ErroGenerico();
+                    }
+                },
+                error: function (data) {
+                    ErroGenerico();
+                }
+            });
+        }
     }
 </script>
