APTOP_FASE2_005_Aplicar o novo layout e as novas funcionalidades na área publica (modulo de embarque certo) - Ajustes do teste

--- a/CMSv4/Areas/Modulo/Views/TakeOrPay/Etapa4_1.cshtml
+++ b/CMSv4/Areas/Modulo/Views/TakeOrPay/Etapa4_1.cshtml
@@ -73,9 +73,9 @@
             </form>
             <div class="invalid-feedback" id="erroUnidades" style="display: none; text-align: center;"><h6>A unidade deve ser maior que 0.</h6></div>
             <div class="invalid-feedback" id="erroPortos" style="display: none; text-align: center;"><h6>Selecione os portos de de origem e destino.</h6></div>
-            <form>
+            <form style="max-width: 100%;">
                 <p class="text-center">Qual a tonelagem média a ser carregada por container?</p>
-                <div class="form-row justify-content-center">
+                <div class="form-row justify-content-center mx-auto col-md-6">
                     <div class="form-group col-12"><input type="number" class="form-control" id="TonelagemMedia" min="0"></div>
                     <div class="form-group col-12"><label>Toneladas<br> por Container</label></div>
                     <div class="invalid-feedback" id="erroTonelagem" style="display: none; text-align: center;"><h6>Preencha este campo.</h6></div>
