APTOP_FASE2_002_Alteração na tela administrativa para gestão de programação de navios

--- a/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoNavioAdmin/Index.cshtml
+++ b/CMSv4/Areas/ModuloAdmin/Views/ProgramacaoNavioAdmin/Index.cshtml
@@ -6,7 +6,7 @@
     var urlModelo = string.Format("/cms/{0}/programacaonavioadmin/downloadmodelo", portal.Diretorio);
     var urlHistorico = string.Format("/cms/{0}/programacaonavioadmin/historicoimportacao", portal.Diretorio);
     var urlDownload = string.Format("/cms/{0}/programacaonavioadmin/downloadimportacao/", portal.Diretorio);
-    var salvo = TempData["Salvo"];
+    var salvo = (bool?)TempData["Salvo"] ?? false;
     var mensagem = TempData["Mensagem"];
 }
 
@@ -25,6 +25,12 @@
         <div class="clearfix"></div>
     </div>
     <div class="portlet-body">
+        @if (salvo)
+        {
+            <div class="alert alert-success">
+                @TAdm("Registro salvo com sucesso!")
+            </div>
+        }
         @Helpers.PainelExcluir(T("Atenção"), T("Você confirma a exclusão dos itens selecionados?"), Request.Url.AbsolutePath + "/excluir")
 
         <div id="divErros" class="alert alert-danger" hidden>
